--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
-#Connection stream
-spring.datasource.url = jdbc:postgresql://localhost:5432/FizzBuzz
-spring.datasource.username = postgres
-spring.datasource.password = #REF!123
+#Connection (tested and successfully connected during the test)
+spring.datasource.url=jdbc:postgresql://localhost:5432/FizzBuzz_V2
+spring.datasource.username=nika.avalishvili
+spring.datasource.password=#REF!123
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
 
 
-#Additional configurations
+#General configurations about timeout and user num that can work simultaniously
 spring.datasource.hikari.connectionTimeout = 2000
-spring.datasource.hikari.maximumPoolSize = 1
+spring.datasource.hikari.maximumPoolSize = 5
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation = true
-
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.show-sql = true
