--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username=nika.avalishvili
 spring.datasource.password=#REF!123
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
 
 #General configurations about timeout and user num that can work simultaniously
@@ -13,3 +13,7 @@ spring.datasource.hikari.maximumPoolSize = 5
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation = true
+
+
+#liquibase
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
